# pnw-cnet-5-onnx

./: .gitignore  README.md  compare_models.py  convert_to_onnx.py  download_dataset.py  main.py  pyproject.toml  run_inference.py  run_inference_onnx.py  wav_to_spectrogram.py
reference_scripts/: Test_Model.py  Train_Model.py
