[project]
name = "pnw-cnet-5-onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "keras>=3.12.0",
    "librosa>=0.11.0",
    "numpy>=1.26.0,<2.0.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "pillow>=10.0.0",
    "protobuf>=3.20.3,<4",
    "tensorflow>=2.19.0,<2.20.0",
    "tf2onnx>=1.16.0",
]
